[package]
name = "iota-rdb"
version = "0.1.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
license = "MIT"

[dependencies]
clap = "2"
zmq = "0.8"
mysql = "11"
clippy = {version = "*", optional = true}

[dependencies.iota-trytes]
path = "iota.rs/trytes"
features = ['alloc']

[dependencies.iota-sign]
path = "iota.rs/sign"

[dependencies.iota-curl-cpu]
path = "iota.rs/curl-cpu"

[features]
default = []
