[package]
name = "iota-rdb"
version = "0.1.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
license = "MIT"

[dependencies]
clap = "2"
zmq = "0.8"
mysql = "11"
log = "0.3"
log4rs = "0.7"
clippy = {version = "*", optional = true}

[dependencies.iota-trytes]
path = "iota.rs/trytes"
features = ['alloc']

[dependencies.iota-sign]
path = "iota.rs/sign"

[dependencies.iota-kerl]
path = "iota.rs/kerl"

[features]
default = []
